--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -8,7 +8,7 @@
         <div class="content">
             <h1>Organizar eventos presenciais ou online ficou fácil </h1>
             <h5>Certificados online prontos em instantes.</h5>
-            <a class="button-register">Cadastra-se</a>
+            <a class="button-register" href="/register">Cadastra-se</a>
         </div>
         <div class="content-img">
             <img src="../../../assets/images/img-bg.png" alt="Certfacil">
