Feature: Estilização landing page

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,18 +1,30 @@
-<head></head>
-<body>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <title>CertFacil</title>
+    <meta charset="utf-8" />
+  </head>
+  <body>
     <div class="top-bar">
-        <img src="../../../assets/images/logo-certfacil.png" alt="Logo Certfacil">
-        <a class="button-login" href="/login" >Login</a>
-    </div>  
-    <div class="container">
-        <div class="content">
-            <h1>Organizar eventos presenciais ou online ficou fácil </h1>
-            <h5>Certificados online prontos em instantes.</h5>
-            <a class="button-register" href="/register">Cadastra-se</a>
-        </div>
-        <div class="content-img">
-            <img src="../../../assets/images/img-bg.png" alt="Certfacil">
-        </div>
+      <img
+        src="../../../assets/images/logo-certfacil.png"
+        alt="Logo Certfacil"
+      />
+      <a class="button-login" href="/login">Login</a>
     </div>
-</body> 
-
+    <div class="container">
+      <div class="content">
+        <h1>
+          Organizar eventos <br />
+          presenciais ou <br />
+          online ficou fácil
+        </h1>
+        <h5>Certificados online prontos em instantes.</h5>
+        <a class="button-register" href="/register">Cadastra-se</a>
+      </div>
+      <div class="content-img">
+        <img src="../../../assets/images/img-bg.png" alt="Certfacil" />
+      </div>
+    </div>
+  </body>
+</html>
