--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,60 @@
-<p>register works!</p>
+<div>
+    <h1>Crie Sua Conta</h1>
+</div>
+
+<form (submit)="onSubmit()">
+
+    <div>
+      <label for="Nome Completo">
+        Nome Completo
+      </label>
+      <input id="name" type="text" formControlName="name">
+    </div>
+
+    <div>
+        <label for="E-mail">
+          E-mail
+        </label>
+        <input id="email" type="text" formControlName="email">
+      </div>
+  
+      <div>
+        <label for="Telefone">
+          Telefone
+        </label>
+        <input id="phone" type="text" formControlName="phone">
+      </div>
+
+      <div>
+        <label for="Semestre">
+          Semestre
+        </label>
+        <input id="Semestre" type="text" formControlName="Semestre">
+      </div>
+      
+    <div>
+      <label for="password">
+        Senha
+      </label>
+      <input id="password" type="password" formControlName="password">
+    </div>
+
+    <div>
+        <input type="checkbox" id="scales" name="scales">
+        <label for="scales">Participantes</label>
+    </div>
+
+    <div>
+        <input type="checkbox" id="scales" name="scales">
+        <label for="scales">Palestrante</label>
+    </div>
+
+    <div>
+        <input type="checkbox" id="scales" name="scales">
+        <label for="scales">Concordo com os<a href="https://s3-sa-east-1.amazonaws.com/raizen-prod/items-files/item-189-tcg.pdf" target="_blank"> Termos e Condições</a></label>
+    </div>
+
+    <button class="button" type="submit">Cadastrar</button>
+  
+  </form>
+
