--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,28 +1,27 @@
+<header  class= "cabecalho">
+  <img  class= "logo" src="../../../assets/images/logo-certfacil.png" alt="Logo Certfacil">
+  
+</header>
+
+<body >
+ 
+
+  <div class= "form-box">
 <div>
-    <h1>Acesse Sua Conta</h1>
+    <h1 class= "name">Acesse sua conta </h1>
 </div>
 
 <form (submit)="onSubmit()">
 
-    <div>
-      <label for="user">
-        Usuario
-      </label>
-      <input id="user" type="text" formControlName="user">
-    </div>
-  
-    <div>
-      <label for="password">
-        Senha
-      </label>
-      <input id="password" type="password" formControlName="password">
-    </div>
-    <button class="button" type="submit">Entrar</button>
+      <input id="user" type="text" formControlName="user" placeholder="Usuário">
+      <input id="password" type="password" formControlName="password" placeholder="Senha">
+      <button class="button" type="submit">Entrar</button>
   
   </form>
-  <div>
+  <div class= "input-group">
       <h5>Esqueceu sua senha? <a class="button-register" href="/recover">Recuperar</a><br>
         Não tem uma conta? <a class="button-register" href="/register">Cadastra-se</a>
     </h5>
   </div>
-
+</div>
+</body>
