--- a/src/app/pages/recover/recover.component.html
+++ b/src/app/pages/recover/recover.component.html
@@ -1,22 +1,30 @@
+<header  class= "cabecalho">
+  <img  class= "logo" src="../../../assets/images/logo-certfacil.png" alt="Logo Certfacil">
+  
+</header>
+
+<body>
+  <div class= "form-box">
 <div>
-    <h1>Recuperar Senha</h1>
+    <h1 class= "name">Recuperar sua senha</h1>
 </div>
 
 <form (submit)="onSubmit()">
 
     <div>
-      <label for="email">
-        E-mail
-      </label>
-      <input id="email" type="text" formControlName="email">
+     
+      <input id="email" type="text" formControlName="email" placeholder="email">
     </div>
   
-    <button class="button" type="submit">Entrar</button>
+    <button class="button" type="submit">Enviar</button>
   
   </form>
-  <div>
+  <div class= "input-group">
       <h5>Esqueceu sua senha? <a class="button-register" href="/login">Login</a><br>
         Não tem uma conta? <a class="button-register" href="/register">Cadastra-se</a>
     </h5>
   </div>
+  </div>
+
+  </body>
 
