Fix: Correção nos focus dos inputs que estava clocando borda quando clicava

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <div class="top-bar">
-      <img
-        src="../../../assets/images/logo-certfacil.png"
-        alt="Logo Certfacil"
-      />
+      <a href="/" class="logo">
+        <img
+          src="../../../assets/images/logo-certfacil.png"
+          alt="Logo Certfacil"
+        />
+      </a>
       <a class="button-login" href="/login">Login</a>
     </div>
     <div class="container">
