--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -9,15 +9,15 @@ body {
   justify-content: space-between;
   width: 90%;
   margin: 0 auto;
-  padding: 50px 0 0;
+  padding: 20px 0 0;
 }
 
 .top-bar img {
   object-fit: contain;
-  width: 230px;
+  width: 200px;
 }
 
-.top-bar a {
+.top-bar .button-login {
   border: 3px solid white;
   border-radius: 30px;
   width: 190px;
@@ -27,15 +27,15 @@ body {
   color: white;
   font-family: "Nunito";
   font-weight: bold;
-  font-size: 24px;
+  font-size: 18px;
   text-decoration: none;
   height: auto;
-  padding: 10px 0;
+  padding: 8px 0;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   transition: linear 0.3s;
 }
 
-.top-bar a:hover {
+.top-bar .button-login:hover {
   border: 3px solid black;
   color: black;
 }
@@ -44,7 +44,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 90%;
-  margin: 90px auto;
+  margin: auto;
   align-items: center;
 }
 
@@ -56,18 +56,18 @@ body {
   color: white;
   font-family: "Nunito";
   font-weight: bold;
-  font-size: 85px;
+  font-size: 55px;
   margin: 0;
-  padding-bottom: 40px;
+  padding-bottom: 15px;
 }
 
 .container .content h5 {
   color: white;
   font-family: "Nunito";
   font-weight: 600;
-  font-size: 30px;
+  font-size: 22px;
   margin: 0;
-  padding-bottom: 45px;
+  padding-bottom: 60px;
 }
 
 .container .content a {
@@ -75,11 +75,11 @@ body {
   color: white;
   font-family: "Nunito";
   font-weight: 700;
-  font-size: 30px;
+  font-size: 20px;
   border: none;
   text-decoration: none;
   border-radius: 30px;
-  padding: 15px 110px;
+  padding: 15px 100px;
   cursor: pointer;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   transition: linear 0.3s;
@@ -91,7 +91,6 @@ body {
 }
 
 .container .content-img img {
-  width: 750px;
   object-fit: cover;
 }
 
