--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,94 +1,100 @@
+body {
+  height: 100vh;
+}
+
 .cabecalho {
-    height: 60px;
-    background: linear-gradient(90deg, #F05097 0%, #514D9E 100%);
+  height: 60px;
+  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
 }
 
-.logo{
-    display: block;
-    height: 50px;
-    margin: 0 auto;
-    padding: 10px 0;
+.logo {
+  display: block;
+  height: 50px;
+  margin: 0 auto;
+  padding: 10px 0;
 }
 
-.name{
-    width: 283px;
-    height: 19px;
-    font-family: "Nunito";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 22px;
-    margin: 0 auto;
-    padding: 80px 0 60px;
+.name {
+  width: 283px;
+  height: 19px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 22px;
+  margin: 0 auto;
+  padding: 80px 0 60px;
 
-/* or 85% */
-    text-align: center;
+  /* or 85% */
+  text-align: center;
 
-    color: #000000;
-
-
+  color: #000000;
 }
-.form-box{
-    margin: 40px auto;
-    width: 468px;
-    height: 470px;
-    left: 486px;
-    top: 177px;
-    background: #FFD1E5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 30px;
+.form-box {
+  margin: 40px auto;
+  width: 468px;
+  height: 470px;
+  left: 486px;
+  top: 177px;
+  background: #ffd1e5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
 }
 
-.button{
-    padding-left: 5px 10px;
-    width: 312px;
-    height: 40px;
-    left: 564px;
-    top: 502px; 
-    display:grid;
-    background: linear-gradient(90deg, #F05198 -5.82%, #544E9E 100.09%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-    align-items: center;
-    margin: 0 auto 30px auto;
-    font-family: "Nunito";
-    font-style: normal;
-    color: #FFD1E5;
-    
-   
+.button {
+  padding-left: 5px 10px;
+  width: 312px;
+  height: 40px;
+  left: 564px;
+  top: 502px;
+  justify-content: center;
+  display: flex;
+  border: none;
+  background: linear-gradient(90deg, #f05198 -5.82%, #544e9e 100.09%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  align-items: center;
+  margin: 0 auto 30px auto;
+  font-family: "Nunito";
+  font-style: normal;
+  color: #ffd1e5;
 }
 
-form input{
-    border: none;
-    padding-left: 15px;
-    width: 312px;
-    height: 40px;
-    left: 564px;
-    top: 362px;
-    display: flex;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-    align-items: center;
-    margin: 0 auto 30px auto;
+form input {
+  border: none;
+  padding-left: 15px;
+  width: 312px;
+  height: 40px;
+  left: 564px;
+  top: 362px;
+  display: flex;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  align-items: center;
+  margin: 0 auto 30px auto;
 }
 
-.input-group{
-    width: 158px;
-    height: 15px;
-    left: 641px;
-    top: 577px;
-    display:block;
-    font-family: "Nunito";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 15px;
-    align-items: center;
-    margin: 0 auto 30px auto;
+.input-group {
+  text-align: center;
+  width: 158px;
+  height: 15px;
+  left: 641px;
+  top: 577px;
+  display: block;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 18px;
+  align-items: center;
+  margin: 0 auto 30px auto;
 }
 
-.button-register{
-    color:#000000;
+form input:focus {
+  outline: 0;
 }
 
+.button-register {
+  color: #000000;
+}
