--- a/src/app/pages/recover/recover.component.css
+++ b/src/app/pages/recover/recover.component.css
@@ -39,8 +39,7 @@
 }
 
 .button {
-  padding-left: 5px 10px;
-  width: 250px;
+  width: 70%;
   height: 40px;
   left: 564px;
   top: 502px;
@@ -59,7 +58,7 @@
 form input {
   border: none;
   padding-left: 15px;
-  width: 312px;
+  width: 66%;
   height: 40px;
   left: 564px;
   top: 362px;
