--- a/src/app/pages/recover/recover.component.css
+++ b/src/app/pages/recover/recover.component.css
@@ -31,8 +31,6 @@
   margin: 75px auto;
   width: 468px;
   height: 398px;
-  left: 486px;
-  top: 177px;
   background: #ffd1e5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
@@ -41,8 +39,6 @@
 .button {
   width: 70%;
   height: 40px;
-  left: 564px;
-  top: 502px;
   display: grid;
   background: linear-gradient(90deg, #f05198 -5.82%, #544e9e 100.09%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -53,6 +49,7 @@
   font-style: normal;
   color: #ffd1e5;
   border: none;
+  padding: 0;
 }
 
 form input {
@@ -60,8 +57,6 @@ form input {
   padding-left: 15px;
   width: 66%;
   height: 40px;
-  left: 564px;
-  top: 362px;
   display: flex;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -77,8 +72,6 @@ form input:focus {
 .input-group {
   width: 158px;
   height: 15px;
-  left: 641px;
-  top: 577px;
   display: block;
   font-family: "Nunito";
   font-style: normal;
