--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -92,7 +92,7 @@ body {
 .cadastro .cadastro-content form .checkbox {
   display: flex;
   justify-content: center;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 .cadastro .cadastro-content form .checkbox input i {
@@ -112,9 +112,29 @@ body {
   font-weight: bold;
   font-size: 13px;
   color: #666666;
-  padding-bottom: 20px;
+  padding-bottom: 25px;
 }
 
 .cadastro .cadastro-content form .checkbox-termo label a {
   color: #666666;
+}
+
+.cadastro .cadastro-content button {
+  display: block;
+  margin: auto;
+  background-image: linear-gradient(to right, #f15097, #484c9e);
+  color: white;
+  font-family: "Nunito";
+  font-weight: bold;
+  font-size: 13px;
+  border: none;
+  padding: 10px 60px;
+  border-radius: 40px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.cadastro .cadastro-content button:hover {
+  transform: scale(1.1);
 }
