--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,12 +11,16 @@
     <h1 class= "name">Acesse sua conta </h1>
 </div>
 
-<form (submit)="onSubmit()">
+<form novalidate [formGroup]="form">
 
-      <input id="user" type="text" formControlName="user" placeholder="Usuário">
-      <input id="password" type="password" formControlName="password" placeholder="Senha">
-      <button class="button" type="submit">Entrar</button>
-  
+      <input id="email" 
+      type="text" 
+      formControlName="email" 
+      placeholder="Usuário" 
+      formControlName="email"
+      >
+      <input id="password" type="password" formControlName="password" placeholder="Senha" formControlName="password">
+      <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
   </form>
   <div class= "input-group">
       <h5>Esqueceu sua senha? <a class="button-register" href="/recover">Recuperar</a><br>
