fix: Correcao do campo documento

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -49,9 +49,9 @@
           <div>
             <input
               class="input"
-              id="document"
+              id="documento"
               type="text"
-              formControlName="document"
+              formControlName="documento"
               placeholder="CPF*"
               required
             />
