Fix: Formulario cadastro cadastro

--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <div id="menu">
+    <h3>Menu</h3>
     <ul>
       <li>Início</li>
       <li>Criar Eventos</li>
@@ -11,15 +12,19 @@
       <li>Meu Perfil</li>
     </ul>
   </div>
-  <h2>Vamos criar seu evento</h2>
   <form>
-    <input type="text" placeholder="Nome do Evento" required />
-    <input type="text" placeholder="Descrição do evento" />
-    <input type="date" id="especial" placeholder="Data" />
-    <input type="time" id="especial" placeholder="Horário" />
-    <input type="text" placeholder="Local" />
-    <input type="text" placeholder="Palestrante" required />
-    <input type="number" placeholder="Carga horária" />
-    <input type="submit" class="button" value="Criar evento" />
+    <h2>Vamos criar seu evento</h2>
+    <input type="text" placeholder="Nome do Evento" required /><br /><br />
+    <input type="text" placeholder="Descrição do evento" /><br /><br />
+    <input type="date" id="especial" placeholder="Data" /><br /><br />
+    <input type="time" id="especial" placeholder="Horário" /><br /><br />
+    <input type="text" placeholder="Local" /><br /><br />
+    <input type="text" placeholder="Palestrante" required /><br /><br />
+    <input type="number" placeholder="Carga horária" /><br /><br />
+    <input
+      type="submit"
+      class="button"
+      value="Criar evento"
+    /><br /><br /><br /><br /><br />
   </form>
 </body>
