--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -22,13 +22,14 @@
     <div class="cadastro">
       <div class="cadastro-content">
         <h1>Cadastre-se</h1>
-        <form (submit)="onSubmit()">
+
+        <form novalidate [formGroup]="form">
           <div>
             <input
               class="input"
-              id="name"
+              id="nome"
               type="text"
-              formControlName="name"
+              formControlName="nome"
               placeholder="Nome completo*"
               required
             />
@@ -37,9 +38,20 @@
           <div>
             <input
               class="input"
-              id="cpf"
+              id="apelido"
               type="text"
-              formControlName="cpf"
+              formControlName="apelido"
+              placeholder="Apelido*"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              class="input"
+              id="documento"
+              type="text"
+              formControlName="documento"
               placeholder="CPF*"
               required
             />
@@ -59,9 +71,9 @@
           <div>
             <input
               class="input"
-              id="phone"
+              id="celular"
               type="text"
-              formControlName="phone"
+              formControlName="celular"
               placeholder="Telefone*"
               required
             />
@@ -70,21 +82,10 @@
           <div>
             <input
               class="input"
-              id="Unidade"
+              id="campus"
               type="text"
-              formControlName="Unidade"
+              formControlName="campus"
               placeholder="Unidade*"
-              required
-            />
-          </div>
-
-          <div>
-            <input
-              class="input"
-              id="Semestre"
-              type="text"
-              formControlName="Semestre"
-              placeholder="Semestre*"
               required
             />
           </div>
@@ -96,34 +97,62 @@
               type="password"
               formControlName="password"
               placeholder="Senha*"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              class="input"
+              id="confirm"
+              type="password"
+              formControlName="confirm"
+              placeholder="Confirme a Senha*"
+              required
             />
           </div>
 
           <div class="checkbox">
             <div>
-              <input type="checkbox" id="scales" name="scales" />
+              <input
+                type="radio"
+                name="tipo_usuario"
+                formControlName="tipo_usuario"
+                value="participante"
+              />
               <label for="scales">Participantes</label>
             </div>
             <div>
-              <input type="checkbox" id="scales" name="scales" />
+              <input
+                type="radio"
+                name="tipo_usuario"
+                formControlName="tipo_usuario"
+                value="palestrante"
+              />
               <label for="scales">Palestrante</label>
             </div>
           </div>
-
-          <div class="checkbox-termo">
-            <input type="checkbox" id="scales" name="scales" class="checkbox" />
-            <label for="scales"
-              >Concordo com os
-              <a
-                href="https://s3-sa-east-1.amazonaws.com/raizen-prod/items-files/item-189-tcg.pdf"
-                target="_blank"
-                >Termos e Condições</a
-              ></label
-            >
-          </div>
-
-          <button class="button" type="submit">Cadastrar</button>
         </form>
+        <div class="checkbox-termo">
+          <input
+            type="checkbox"
+            id="scales"
+            name="scales"
+            class="checkbox"
+            required
+          />
+          <label for="scales"
+            >Concordo com os
+            <a
+              href="https://s3-sa-east-1.amazonaws.com/raizen-prod/items-files/item-189-tcg.pdf"
+              target="_blank"
+              >Termos e Condições</a
+            ></label
+          >
+        </div>
+        <button class="button" type="submit" (click)="register()">
+          Cadastrar
+        </button>
       </div>
     </div>
   </div>
