--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,7 +1,7 @@
 body {
   background-color: #e0e0e0;
   margin: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
@@ -13,6 +13,7 @@ body {
   width: 33%;
   background-image: linear-gradient(to right, #f15097, #484c9e);
   box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.25);
+  height: 100vh;
 }
 
 .content .logo {
@@ -67,6 +68,7 @@ body {
   margin: auto;
   justify-content: center;
   display: flex;
+  align-items: center;
 }
 .cadastro .cadastro-content form .input {
   width: 270px;
@@ -95,9 +97,8 @@ body {
   padding: 10px 0;
 }
 
-.cadastro .cadastro-content form .checkbox input i {
-  width: 15px;
-  height: 15px;
+.cadastro .cadastro-content form .checkbox input {
+  margin: 0 3px 2px 0;
 }
 
 .cadastro .cadastro-content form .checkbox label {
@@ -107,21 +108,20 @@ body {
   color: #666666;
 }
 
-.cadastro .cadastro-content form .checkbox-termo label {
+.cadastro .cadastro-content .checkbox-termo label {
   font-family: "Nunito";
   font-weight: bold;
   font-size: 13px;
   color: #666666;
-  padding-bottom: 25px;
 }
 
-.cadastro .cadastro-content form .checkbox-termo label a {
+.cadastro .cadastro-content .checkbox-termo label a {
   color: #666666;
 }
 
 .cadastro .cadastro-content button {
   display: block;
-  margin: auto;
+  margin: 25px auto 0;
   background-image: linear-gradient(to right, #f15097, #484c9e);
   color: white;
   font-family: "Nunito";
