--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -134,7 +134,10 @@
 
           <button class="button" type="submit" (click)="register()">Cadastrar</button>
         </form>
-
+        <div class= "recover">
+          <h5>Já tem uma conta?<a class="button-register" href="/login">Fazer login</a><br>
+        </h5>
+      </div>
       </div>
     </div>
   </div>
