--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,10 +1,10 @@
 <header  class= "cabecalho">
   <img  class= "logo" src="../../../assets/images/logo-certfacil.png" alt="Logo Certfacil">
-  
+
 </header>
 
 <body >
- 
+
 
   <div class= "form-box">
 <div>
@@ -13,16 +13,16 @@
 
 <form novalidate [formGroup]="form">
 
-      <input id="email" 
-      type="text" 
-      formControlName="email" 
-      placeholder="Usuário" 
+      <input id="email"
+      type="text"
+      formControlName="email"
+      placeholder="Usuário"
       formControlName="email"
       >
       <input id="password" type="password" formControlName="password" placeholder="Senha" formControlName="password">
       <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
   </form>
-  <div class= "input-group">
+  <div class= "recover">
       <h5>Esqueceu sua senha? <a class="button-register" href="/recover">Recuperar</a><br>
         Não tem uma conta? <a class="button-register" href="/register">Cadastra-se</a>
     </h5>
