--- a/src/app/pages/recover/recover.component.html
+++ b/src/app/pages/recover/recover.component.html
@@ -13,13 +13,13 @@
 
     <div>
      
-      <input id="email" type="text" formControlName="email" placeholder="email">
+      <input id="email" type="text" formControlName="email" placeholder="Email">
     </div>
   
     <button class="button" type="submit">Enviar</button>
   
   </form>
-  <div class= "input-group">
+  <div class= "recover">
       <h5>Esqueceu sua senha? <a class="button-register" href="/login">Login</a><br>
         Não tem uma conta? <a class="button-register" href="/register">Cadastra-se</a>
     </h5>
