--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -8,12 +8,13 @@ body {
   display: flex;
   justify-content: space-between;
   width: 90%;
+  margin: 0;
+  padding: 0;
 }
 .content {
   width: 33%;
-  background-image: linear-gradient(to right, #f15097, #484c9e);
+  background-image: linear-gradient(to right, var(--pink), var(--purple));
   box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.25);
-  height: 100vh;
 }
 
 .content .logo {
@@ -47,10 +48,11 @@ body {
 
 .cadastro .cadastro-content {
   display: inline;
-  background-color: #ffd1e5;
+  background-color: var(--light-pink);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
   padding: 50px 90px;
+  margin: 20px 0;
 }
 
 .cadastro .cadastro-content h1 {
@@ -106,6 +108,11 @@ body {
   font-weight: bold;
   font-size: 13px;
   color: #666666;
+  margin: 0;
+}
+
+.cadastro .cadastro-content .checkbox-termo input {
+  margin: 0 3px 3px 0;
 }
 
 .cadastro .cadastro-content .checkbox-termo label {
@@ -113,6 +120,7 @@ body {
   font-weight: bold;
   font-size: 13px;
   color: #666666;
+  margin: 0;
 }
 
 .cadastro .cadastro-content .checkbox-termo label a {
@@ -122,7 +130,7 @@ body {
 .cadastro .cadastro-content button {
   display: block;
   margin: 25px auto 0;
-  background-image: linear-gradient(to right, #f15097, #484c9e);
+  background-image: linear-gradient(to right, var(--pink), var(--purple));
   color: white;
   font-family: "Nunito";
   font-weight: bold;
@@ -140,14 +148,25 @@ body {
 }
 
 .recover h5 {
-
   text-align: center;
   display: block;
   font-family: "Nunito";
   font-style: normal;
   font-weight: normal;
+  color: #666666;
   font-size: 11px;
   line-height: 18px;
   align-items: center;
-  margin: 0 auto 30px auto;
+  margin: 20px auto 0;
+}
+
+.recover h5 a {
+  color: #666666;
+  text-decoration: underline;
+  margin-left: 4px;
+}
+
+::selection {
+  background-color: black;
+  color: white;
 }
