--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,6 +21,7 @@
         formControlName="email"
         placeholder="Usuário"
         formControlName="email"
+        required
       />
       <input
         id="password"
@@ -28,6 +29,7 @@
         formControlName="password"
         placeholder="Senha"
         formControlName="password"
+        required
       />
       <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
     </form>
