Feature: Criacao da Header

--- a/src/app/pages/certificate/certificate.component.html
+++ b/src/app/pages/certificate/certificate.component.html
@@ -1,47 +1,42 @@
-<!DOCTYPE HTML>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Eventos</title>
-	</head>
-	
-	<body >
-<div id="container">  	
-		
-<div id="menu">  		
-<h3>Menu</h3>  		
+
+<app-header></app-header>
+
+<body >
+<div id="container">
+
+<div id="menu">
+<h3>Menu</h3>
 	<ul>
 		<li>Início</li>
 		<li>Certificados</li>
 		<li>Meu Perfil</li>
-	</ul> 			
-</div>  	
+	</ul>
+</div>
 
-<div id="contents1">  		
-	<h3>TECH WEEK 2018</h3>  
+<div id="contents1">
+	<h3>TECH WEEK 2018</h3>
 Cidade:<br>
 Local:<br>
 Data:	<br>
 <input type="submit" class="button" value="Baixar Certificado"><br>
-</div>  	
+</div>
 
-<div id="contents2">  		
-	<h3>TECH WEEK 2019</h3>  
+<div id="contents2">
+	<h3>TECH WEEK 2019</h3>
 Cidade:<br>
 Local:<br>
 Data:	<br>
 <input type="submit" class="button" value="Baixar Certificado"><br>
-</div>  
+</div>
 
-<div id="contents3">  		
+<div id="contents3">
 	<h3>TECH WEEK 2020</h3>
 Cidade:<br>
 Local:<br>
-Data:	<br>	
-<input type="submit" class="button" value="Baixar Certificado"><br>		
-</div>  	
+Data:	<br>
+<input type="submit" class="button" value="Baixar Certificado"><br>
+</div>
 
-</div> 
+</div>
 
    	</body>
-</html>
