Feature: Permicoes de no home

--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -1,7 +1,4 @@
-<head>
-  <meta charset="UTF-8" />
-  <title>Lista de Presença</title>
-</head>
+<app-header></app-header>
 <body>
   <div id="menu">
     <ul>
