--- a/src/app/pages/myprofile/myprofile.component.html
+++ b/src/app/pages/myprofile/myprofile.component.html
@@ -1,21 +1,15 @@
-<!DOCTYPE HTML>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Meu Perfil</title>
-	</head>
-	
-	<body>
-<div id="menu">  		
-<h3>Menu</h3>  		
+<app-header></app-header>
+<body>
+<div id="menu">
+<h3>Menu</h3>
 	<ul>
 		<li>Início</li>
 		<li>Criar Eventos</li>
 		<li>Lista de Presença</li>
 		<li>Meu Perfil</li>
-	</ul> 		
+	</ul>
 
-</div>  	
+</div>
 	<form>
 		<h2> Vamos criar seu evento </h2>
         <label for="name"></label><br>
@@ -31,4 +25,3 @@
 		<input type="submit" class="button" value="Atualizar perfil"><br><br><br><br><br>
     </form>
 	</body>
-</html>
