--- a/src/app/pages/recover/recover.component.html
+++ b/src/app/pages/recover/recover.component.html
@@ -1,7 +1,4 @@
-<header  class= "cabecalho">
-  <img  class= "logo" src="../../../assets/images/logo-certfacil.png" alt="Logo Certfacil">
-
-</header>
+<app-header></app-header>
 
 <body>
   <div class= "form-box">
