--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -1,7 +1,4 @@
-<head>
-  <meta charset="UTF-8" />
-  <title>Criar Eventos</title>
-</head>
+<app-header></app-header>
 <body>
   <div id="menu">
     <h3>Menu</h3>
