--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,47 +1,41 @@
-<!DOCTYPE HTML>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Eventos</title>
-	</head>
-	
+<app-header></app-header>
+
 	<body>
-<div id="container">  	
-	
-<div id="menu">  		
-	<h3>Menu</h3>  		
+<div id="container">
+
+<div id="menu">
+	<h3>Menu</h3>
 	<ul>
 		<li>Início</li>
 		<li>Eventos</li>
 		<li>Meus Eventos</li>
 		<li>Meu Perfil</li>
-	</ul> 		
-</div>  	
+	</ul>
+</div>
 
-<div id="contents1">  		
-	<h3>TECH WEEK 2018</h3>  
+<div id="contents1">
+	<h3>TECH WEEK 2018</h3>
 Cidade:<br>
 Local:<br>
 Data:	<br>
 <input type="submit" class="button" value="Inscreva-se"><br>
-	</div>  	
-	
-<div id="contents2">  		
-	<h3>TECH WEEK 2019</h3>  
+	</div>
+
+<div id="contents2">
+	<h3>TECH WEEK 2019</h3>
 Cidade:<br>
 Local:<br>
 Data:	<br>
 <input type="submit" class="button" value="Inscreva-se"><br>
-	</div>  	
-	
-<div id="contents3">  		
+	</div>
+
+<div id="contents3">
 	<h3>TECH WEEK 2020</h3>
 Cidade:<br>
 Local:<br>
-Data:	<br>	
-<input type="submit" class="button" value="Inscreva-se"><br>		
-</div>  
-	
-</div> 
+Data:	<br>
+<input type="submit" class="button" value="Inscreva-se"><br>
+</div>
+
+</div>
 	</body>
-</html>
