Feature: Listando cursos na pagina home

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,18 +1,9 @@
 <app-header></app-header>
 
-	<body>
+<body>
+
 <div id="container">
-
-<div id="menu">
-	<h3>Menu</h3>
-	<ul>
-		<li>Início</li>
-		<li>Eventos</li>
-		<li>Meus Eventos</li>
-		<li>Meu Perfil</li>
-	</ul>
-</div>
-
+  <app-headermenu></app-headermenu>
 <div id="contents1">
 	<h3>TECH WEEK 2018</h3>
 Cidade:<br>
