--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,68 +2,22 @@
 <body>
   <div class="container">
     <app-headermenu></app-headermenu>
-
     <div class="content">
+      <ng-container class="conteudo" *ngFor="let event of evento">
       <div class="item">
         <a href="#">
           <div class="conteudo-img">
             <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
           </div>
-          <div class="conteudo">
-            <h3 class="titulo">TECH WEEK 2018</h3>
+            <h3 class="titulo">{{event.descricao}}</h3>
             <h4 class="local">
-              Cidade: Feira de Santana / Bahia <br />
-              Local: UNIFTC - Universidade de Tecnologia e Ciências <br />
-              Data: quarta-feira, 15 de maio de 2019
+              Data:{{event.data_inicio}}
+              Horario: {{event.inicio}} Horas
             </h4>
-            <h4 class="descricao">
-              Evento realizado na Universidade de Tecnologia e Ciências -
-              UNIFTC, c om tema (Gamification - Movimentando a Aprendizagem) na
-              área de Tecnologia de Informação e no ambiente acadêmico.
-            </h4>
-          </div>
+            <h4 class="descricao"></h4>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
-          <div class="conteudo-img">
-            <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
-          </div>
-          <div class="conteudo">
-            <h3 class="titulo">TECH WEEK 2018</h3>
-            <h4 class="local">
-              Cidade: Feira de Santana / Bahia <br />
-              Local: UNIFTC - Universidade de Tecnologia e Ciências <br />
-              Data: quarta-feira, 15 de maio de 2019
-            </h4>
-            <h4 class="descricao">
-              Evento realizado na Universidade de Tecnologia e Ciências -
-              UNIFTC, c om tema (Gamification - Movimentando a Aprendizagem) na
-              área de Tecnologia de Informação e no ambiente acadêmico.
-            </h4>
-          </div>
-        </a>
-      </div>
-      <div class="item">
-        <a href="#">
-          <div class="conteudo-img">
-            <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
-          </div>
-          <div class="conteudo">
-            <h3 class="titulo">TECH WEEK 2018</h3>
-            <h4 class="local">
-              Cidade: Feira de Santana / Bahia <br />
-              Local: UNIFTC - Universidade de Tecnologia e Ciências <br />
-              Data: quarta-feira, 15 de maio de 2019
-            </h4>
-            <h4 class="descricao">
-              Evento realizado na Universidade de Tecnologia e Ciências -
-              UNIFTC, c om tema (Gamification - Movimentando a Aprendizagem) na
-              área de Tecnologia de Informação e no ambiente acadêmico.
-            </h4>
-          </div>
-        </a>
-      </div>
+    </ng-container>
     </div>
   </div>
 </body>
