--- a/src/app/shared/headermenu/headermenu.component.html
+++ b/src/app/shared/headermenu/headermenu.component.html
@@ -16,8 +16,8 @@
               fill="black"
             />
             </svg>
-            </a>
             Início
+            </a>
           </li>
         </ng-container>
 
@@ -36,8 +36,8 @@
                 fill="black"
               />
               </svg>
+              Criar Eventos
             </a>
-            Criar Eventos
           </li>
         </ng-container>
 
@@ -56,14 +56,15 @@
                 fill="black"
               />
               </svg>
+              Eventos
             </a>
-            Eventos
           </li>
         </ng-container>
 
         <ng-container *ngIf="myevents">
-          <li routerLink="/event">
-            <svg
+          <li>
+            <a routerLink="/event">
+              <svg
               width="39"
               height="38"
               viewBox="0 0 39 38"
@@ -76,6 +77,7 @@
               />
             </svg>
             Meus Eventos
+            </a>
           </li>
         </ng-container>
 
@@ -94,8 +96,8 @@
                 fill="black"
               />
               </svg>
+              Lista de Presença
             </a>
-            Lista de Presença
           </li>
         </ng-container>
 
@@ -114,8 +116,8 @@
                 fill="black"
               />
               </svg>
+              Meus Certificados
             </a>
-            Meus Certificados
           </li>
         </ng-container>
 
@@ -134,8 +136,8 @@
                 fill="black"
               />
               </svg>
+              Meu Perfil
             </a>
-            Meu Perfil
           </li>
         </ng-container>
       </ul>
