--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -1,36 +1,35 @@
 <app-header></app-header>
 <body>
-  <div id="menu">
-    <ul>
-      <li>Início</li>
-      <li>Criar Eventos</li>
-      <li>Lista de Presença</li>
-      <li>Meu Perfil</li>
-    </ul>
-  </div>
   <div class="container">
-    <div id="contents1">
-      <h3>TECH WEEK 2018</h3>
-      Cidade:<br />
-      Local:<br />
-      Data:<br />
-      <input type="submit" class="button" value="Fazer Chamada" /><br />
+    <app-headermenu></app-headermenu>
+
+    <div class="container">
+      <div id="contents1">
+        <h3>TECH WEEK 2018</h3>
+        Cidade:<br />
+        Local:<br />
+        Data:<br />
+        <input type="submit" class="button" value="Fazer Chamada" /><br />
+      </div>
+
+      <div id="contents2">
+        <h3>TECH WEEK 2019</h3>
+        Cidade:<br />
+        Local:<br />
+        Data:<br />
+        <input type="submit" class="button" value="Fazer Chamada" /><br />
+      </div>
+
+      <div id="contents3">
+        <h3>TECH WEEK 2020</h3>
+        Cidade:<br />
+        Local:<br />
+        Data:<br />
+        <input type="submit" class="button" value="Fazer Chamada" /><br />
+      </div>
     </div>
 
-    <div id="contents2">
-      <h3>TECH WEEK 2019</h3>
-      Cidade:<br />
-      Local:<br />
-      Data:<br />
-      <input type="submit" class="button" value="Fazer Chamada" /><br />
-    </div>
-
-    <div id="contents3">
-      <h3>TECH WEEK 2020</h3>
-      Cidade:<br />
-      Local:<br />
-      Data:<br />
-      <input type="submit" class="button" value="Fazer Chamada" /><br />
-    </div>
   </div>
+
+
 </body>
