--- a/src/app/pages/certificate/certificate.component.html
+++ b/src/app/pages/certificate/certificate.component.html
@@ -4,39 +4,34 @@
 <body >
 <div id="container">
 
-<div id="menu">
-<h3>Menu</h3>
-	<ul>
-		<li>Início</li>
-		<li>Certificados</li>
-		<li>Meu Perfil</li>
-	</ul>
-</div>
+<app-headermenu></app-headermenu>
+<div>
+  <div id="contents1">
+    <h3>TECH WEEK 2018</h3>
+  Cidade:<br>
+  Local:<br>
+  Data:	<br>
+  <input type="submit" class="button" value="Baixar Certificado"><br>
+  </div>
 
-<div id="contents1">
-	<h3>TECH WEEK 2018</h3>
-Cidade:<br>
-Local:<br>
-Data:	<br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-</div>
+  <div id="contents2">
+    <h3>TECH WEEK 2019</h3>
+  Cidade:<br>
+  Local:<br>
+  Data:	<br>
+  <input type="submit" class="button" value="Baixar Certificado"><br>
+  </div>
 
-<div id="contents2">
-	<h3>TECH WEEK 2019</h3>
-Cidade:<br>
-Local:<br>
-Data:	<br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-</div>
+  <div id="contents3">
+    <h3>TECH WEEK 2020</h3>
+  Cidade:<br>
+  Local:<br>
+  Data:	<br>
+  <input type="submit" class="button" value="Baixar Certificado"><br>
+  </div>
 
-<div id="contents3">
-	<h3>TECH WEEK 2020</h3>
-Cidade:<br>
-Local:<br>
-Data:	<br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-</div>
+  </div>
 
 </div>
 
-   	</body>
+</body>
