--- a/src/app/shared/headermenu/headermenu.component.scss
+++ b/src/app/shared/headermenu/headermenu.component.scss
@@ -24,7 +24,7 @@ body {
 .container .menu {
   background-color: white;
   height: 100vh;
-  width: 45%;
+  width: 320px;
   filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -59,6 +59,16 @@ body {
 
 .container .menu li svg:hover path {
   fill: var(--pink);
+}
+.container .menu li a {
+  color: black;
+  align-items: center;
+  display: flex;
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
+    color: var(--pink);
+  }
 }
 
 .content {
