--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,9 +12,11 @@
             <div class="conteudo-textos">
               <h3 class="titulo">{{ event.descricao }}</h3>
               <h4 class="local">
-                Data:{{ event.data_inicio }} Horario: {{ event.inicio }} Horas
+                Cidade: ?? <br />
+                Local: ?? <br />
+                Data:{{ event.data_inicio }}, Horario: {{ event.inicio }} Horas
               </h4>
-              <h4 class="descricao"></h4>
+              <h4 class="descricao">?????</h4>
             </div>
           </a>
         </div>
