--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -53,7 +53,7 @@ body {
 
 .content .item a .conteudo-textos .local {
   font-family: "Nunito";
-  font-style: normal;
+  font-style: bold;
   font-weight: 600;
   font-size: 15px;
   line-height: 16px;
