--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,10 +13,10 @@
               <h3 class="titulo">{{ event.descricao }}</h3>
               <h4 class="local">
                 Cidade: ?? <br />
-                Local: ?? <br />
-                Data:{{ event.data_inicio }}, Horario: {{ event.inicio }} Horas
+                Local: ??<br />
+                Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
               </h4>
-              <h4 class="descricao">?????</h4>
+              <h5 class="descricao">?????</h5>
             </div>
           </a>
         </div>
