--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -122,7 +122,7 @@
                 formControlName="tipo_usuario"
                 value="participante"
               />
-              <label for="scales">Participantes</label>
+              <label for="scales">Participante</label>
             </div>
             <div>
               <input
