Fix: Problema no checkbox de participantes e palestrantes

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -122,7 +122,7 @@
                 formControlName="tipo_usuario"
                 value="participante"
               />
-              <label for="scales">Participante</label>
+              <label>Participante</label>
             </div>
             <div>
               <input
@@ -132,7 +132,7 @@
                 formControlName="tipo_usuario"
                 value="palestrante"
               />
-              <label for="scales">Palestrante</label>
+              <label>Palestrante</label>
             </div>
           </div>
 
