--- a/src/app/pages/myprofile/myprofile.component.html
+++ b/src/app/pages/myprofile/myprofile.component.html
@@ -9,16 +9,16 @@
 			<h1 class="name">Editar Perfil</h1>
 		  </div>
 
-		  <form>
+		  <form novalidate [formGroup]="form">
 			<label for="name"></label><br>
        		 <input type="text" value={{apelido}} disabled>
 			<label for="email"></label>
         	<input type="email"value={{email}} disabled>
         	<label for="novaSenha"></label><br>
-        	<input type="password"id="especial" placeholder="Nova senha">
+        	<input type="password"formControlName="Password" placeholder="Nova senha">
 			<label for="confirmeSenha"></label>
-        	<input type="password" placeholder="Confirme a senha">
-			<button class="button" type="submit" >Atualizar perfil</button>
+        	<input type="password" formControlName="Confirm" placeholder="Confirme a senha">
+			<button class="button" type="submit" (click)='update()' >Atualizar perfil</button>
 
 		  </form>
 		</div>
