Fix: menu geral

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 body {
   margin: 0;
+  height: 100vh;
+  background-color: var(--grey);
 }
 
 :root {
