--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -15,12 +15,14 @@ body {
 
 .content .item {
   padding-bottom: 30px;
+  position: relative;
 }
 
 .content .item a {
   display: flex;
   text-decoration: none;
   align-items: center;
+  position: relative;
 }
 
 .content .item a .conteudo-img {
@@ -53,8 +55,8 @@ body {
 
 .content .item a .conteudo-textos .local {
   font-family: "Nunito";
-  font-style: bold;
-  font-weight: 600;
+  font-style: normal;
+  font-weight: bold;
   font-size: 15px;
   line-height: 16px;
   align-items: center;
@@ -74,4 +76,39 @@ body {
   letter-spacing: 0.002em;
   text-transform: capitalize;
   color: #777777;
+}
+
+.content .item a .video {
+  background: transparent;
+  top: -166px;
+  position: absolute;
+  transition: linear 0.3s;
+  width: 100%;
+  height: 166px;
+  opacity: 0;
+  display: flex;
+  align-items: end;
+}
+
+.content .item a {
+  text-decoration: none;
+  color: white;
+}
+
+.content .item a .video:hover {
+  opacity: 1;
+}
+
+.content .item a .video h3 {
+  font-family: "Nunito";
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 16px;
+  text-transform: capitalize;
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  margin: 0;
+  width: 100%;
+  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
 }
