--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,11 @@
               <h5 class="descricao">?????</h5>
             </div>
           </a>
+          <a href="#">
+            <div class="video">
+              <h3>Ver vídeo</h3>
+            </div>
+          </a>
         </div>
       </ng-container>
     </div>
