--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -2,34 +2,24 @@
 <body>
   <div class="container">
     <app-headermenu></app-headermenu>
-
-    <div class="container">
-      <div id="contents1">
-        <h3>TECH WEEK 2018</h3>
-        Cidade:<br />
-        Local:<br />
-        Data:<br />
-        <input type="submit" class="button" value="Fazer Chamada" /><br />
-      </div>
-
-      <div id="contents2">
-        <h3>TECH WEEK 2019</h3>
-        Cidade:<br />
-        Local:<br />
-        Data:<br />
-        <input type="submit" class="button" value="Fazer Chamada" /><br />
-      </div>
-
-      <div id="contents3">
-        <h3>TECH WEEK 2020</h3>
-        Cidade:<br />
-        Local:<br />
-        Data:<br />
-        <input type="submit" class="button" value="Fazer Chamada" /><br />
-      </div>
+    <div class="content">
+      <ng-container class="conteudo" *ngFor="let event of evento">
+        <div class="item">
+            <div class="conteudo-img">
+              <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
+            </div>
+            <div class="conteudo-textos">
+              <h3 class="titulo">{{ event.descricao }}</h3>
+              <h4 class="local">
+                Cidade: ?? <br />
+                Local: ??<br />
+                Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
+              </h4>
+              <h5 class="descricao">?????</h5>
+              <input type="submit" class="button" value="Fazer Chamada" (click)="Chamada()"/>
+            </div>
+        </div>
+      </ng-container>
     </div>
-
   </div>
-
-
 </body>
