Feature: pagina my events

--- a/src/app/shared/headermenu/headermenu.component.html
+++ b/src/app/shared/headermenu/headermenu.component.html
@@ -63,7 +63,7 @@
 
       <ng-container *ngIf="myevents">
         <li>
-          <a routerLink="/event">
+          <a routerLink="/myevents">
             <svg
               width="39"
               height="38"
