--- a/src/app/pages/myevents/myevents.component.html
+++ b/src/app/pages/myevents/myevents.component.html
@@ -1,36 +1,32 @@
 <app-header></app-header>
 
-	<body >
-<div id="container">
-
-<app-headermenu></app-headermenu>
-
-<div id="contents1">
-	<h3>TECH WEEK 2018</h3>
-Cidade:<br>
-Local:<br>
-Data:<br>
-<input type="submit" class="button" value="Confirmar Presença"><br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-	</div>
-
-<div id="contents2">
-	<h3>TECH WEEK 2019</h3>
-Cidade:<br>
-Local:<br>
-Data:<br>
-<input type="submit" class="button" value="Confirmar Presença"><br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-	</div>
-
-<div id="contents3">
-	<h3>TECH WEEK 2020</h3>
-Cidade:<br>
-Local:<br>
-Data:<br>
-<input type="submit" class="button" value="Confirmar Presença"><br>
-<input type="submit" class="button" value="Baixar Certificado"><br>
-</div>
-
-</div>
-	</body>
+<body>
+  <div id="container">
+    <app-headermenu></app-headermenu>
+    <div class="content">
+      <ng-container class="conteudo" *ngFor="let event of evento">
+        <div class="item">
+          <a href="#">
+            <div class="conteudo-img">
+              <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
+            </div>
+            <div class="conteudo-textos">
+              <h3 class="titulo">{{ event.descricao }}</h3>
+              <h4 class="local">
+                Cidade: ?? <br />
+                Local: ??<br />
+                Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
+              </h4>
+              <h5 class="descricao">?????</h5>
+            </div>
+          </a>
+          <a href="#">
+            <div class="video">
+              <h3>Ver vídeo</h3>
+            </div>
+          </a>
+        </div>
+      </ng-container>
+    </div>
+  </div>
+</body>
