--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -12,10 +12,18 @@
           <input type="text" formControlName="nota" placeholder="Descrição do evento" />
           <input type="date" formControlName="data_inicio" id="especial" placeholder="Data" />
           <input type="time" formControlName="inicio" id="especial" placeholder="Horário" />
-          <input type="text" formControlName="id_usuario" placeholder="Palestrante" required />
+          <input type="text" formControlName="id_usuario" placeholder="Palestrante" required (keydown)="search($event)"/>
+           <div *ngFor="let palestrante of palestrantes">
+              <p>
+              {{palestrante.id_usuario}}  
+              </p>
+              <p>
+              {{palestrante.name}}
+              </p>
+            </div>
           <input type="number" placeholder="Carga horária" />
           <input type="file" placeholder="Imagem do curso" id="upload" (change)="onChange($event)" />
-
+            
           <button class="button" type="submit" (click)="onSubmit()">Criar evento</button>
 
         </form>
