Fix: Confirm Presença

--- a/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
+++ b/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
@@ -5,11 +5,11 @@
   <div class="modal-body">
     <div>
     <p>Presença 1</p>
-    <button>Confirmar</button>
+    <button type="button" class="btn btn-secondary" (click)="Confirmone()">Confirmar</button>
     </div>
     <div>
     <p>Presença 2</p>
-    <button>Confirmar</button>
+    <button type="button" class="btn btn-secondary" (click)="Confirmtwo()">Confirmar</button>
     </div>
   </div>
   <div class="modal-footer">
