--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <app-headermenu></app-headermenu>
     <div class="content">
-      <ng-container class="conteudo" *ngFor="let event of evento">
+      <ng-container class="conteudo" *ngFor=" let event of evento">
         <div class="item">
             <div class="conteudo-img">
               <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
@@ -16,7 +16,7 @@
                 Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
               </h4>
               <h5 class="descricao">?????</h5>
-              <input type="submit" class="button" value="Fazer Chamada" (click)="Chamada()"/>
+              <input type="submit" class="button" value="Fazer Chamada" (click)="Chamada(event.id)"/>
             </div>
         </div>
       </ng-container>
